fixed drag me on mobile devices displaying correctly

--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -20,7 +20,6 @@
   font-family: 'la belle aurore';
   width: 30vw;
   height: 50vh;
-  border-radius: 30px;
   position: absolute;
   top: calc(50% - 50vh / 2);
   right: calc(25% - 30vw / 2);
@@ -56,11 +55,4 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-}
-
-@media screen and (max-width: 1200px) {
-  .drag-title {
-    background-color: $primary-color;
-    color: black
-  }
 }
