--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -143,13 +143,13 @@
     }
     .drag-title {
       position: relative;
-      width: 100px;
+      width: 100%;
       height: auto;
-      top: 50px;
+      top: 100px;
       right: 0;
       box-sizing: border-box;
       margin: auto;
-      font-size: 16px;
+      font-size: 5vw;
       z-index: 0;
     }
   }
